--- a/docs-web/src/prod/resources/config.properties
+++ b/docs-web/src/prod/resources/config.properties
@@ -1,3 +1,8 @@
 api.current_version=${project.version}
 api.min_version=1.0
 db.version=31
+
+# LLM Configuration
+app.llm_api_key=sk-d6a2d46469a343358208d70f427e313e
+app.llm_model_name=deepseek-v3 
+app.llm_api_base_url=https://dashscope.aliyuncs.com/compatible-mode/v1
